# cmake-sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.txt
cmake/: EnableCcache.cmake  GenerateDoxygen.cmake  create_target.cmake  enable_ccache.cmake  initialize_flags.cmake
src/: CMakeLists.txt  add.cpp  add.h  use_unordered_map.cpp  useadd.cpp
